...
    <string name="price_label">Price (optional)</string>
    <string name="unit_grams" translatable="false">g</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="filament_saved_message">Filament with ID: %1$d saved</string>
    <string name="error_field_cant_be_empty">Field cannot be empty</string>
    <string name="back_button_content_description">Back</string>
    <string name="debug_clear_filaments">Clear Filaments</string>
    <string name="debug_filaments_deleted">All filaments deleted</string>
    <string name="debug_clear_prints">Clear Prints</string>
    <string name="debug_prints_deleted">All prints deleted</string>
    <string name="debug_add_sample_filaments">Add sample filaments</string>
    <string name="debug_sample_filaments_added">Sample filaments added</string>
...
    <string name="remaining_weight">Remaining: %1$s</string>
    <string name="created_date_label">Created: %1$s</string>
    <string name="changed_date_label">Changed: %1$s</string>
    <string name="list_purchase_info_full">Bought at %1$s (%2$.2f)</string>
    <string name="list_purchase_info_vendor">Bought at %1$s</string>
    <string name="menu_more_options">More options</string>
    <string name="delete">Delete</string>
    <string name="undelete">Undelete</string>

    <!-- Print related strings -->
    <string name="record_print">Record print</string>
    <string name="record_print_title">Record print</string>
    <string name="view_prints">View prints</string>
...
