...
            onCompletion()
        }
    }

    fun addSampleFilaments(onCompletion: () -> Unit) {
        viewModelScope.launch {
            val vendors = listOf("Prusa", "Bambu Lab", "Extrudr", "Sunlu", "Esun")
            val sizes = listOf(1000, 750, 500, 250)
            repeat(20) {
                val filament = Filament(
                    vendor = vendors.random(),
                    colorHex = InitialColors.initialColors.keys.random(),
                    currentWeight = sizes.random(),
...
